<resources>
    <string name="app_name">ProjectMobile_Kel4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="halaman_menu">Halaman Menu CRUD</string>
    <string name="menu">MENU</string>
    <string name="contoh_menu">Salad</string>
    <string name="contoh_minum">Latte Coffee</string>
    <string name="contoh_cemilan">Gorengan</string>
    <string name="harga">Rp. 12000</string>
    <string name="beranda">Beranda</string>
    <string name="list_menu">List Menu</string>
    <string name="list_reservasi">List Reservasi</string>
    <string name="logout">Logout</string>
    <string name="email">farahdilla@gmail.com</string>
    <string name="id_kasir">ID-001</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="judul">Reservasi</string>
    <string name="namapemesan">Nama Pemesan</string>
    <string name="jumlah_meja">Jumlah Meja</string>
    <string name="tanggal_reservasi">Tanggal Reservasi</string>
    <string name="hp">No. HP</string>
    <string name="reservasibtn">Reservasi</string>
    <string name="reservasi_nama">Nama Pemesan</string>
    <string name="reservasi_hp">No. HP Pemesan</string>
    <string name="icon">Icon</string>
    <string name="confirmreservasi">Konfirmasi</string>
    <string name="cancelreservasi">Batal</string>
    <string name="txtkategori">Kategori</string>
    <string name="txtharga">Harga</string>
    <string name="txtjumlah">Jumlah Pesanan</string>
    <string name="txtpesan">Pesan</string>
    <string name="txttotal">Total Harga</string>
    <string name="viewpesan">Data Pemesanan</string>

</resources>