<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/gambar_makan"
        android:layout_width="110dp"
        android:layout_height="120dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/food1"/>

    <TextView
        android:id="@+id/list_menu"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/list_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@id/gambar_makan"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/list_harga"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txtharga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@id/gambar_makan"
        app:layout_constraintTop_toBottomOf="@+id/list_menu"/>

    <TextView
        android:id="@+id/list_kategori"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txtkategori"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@id/gambar_makan"
        app:layout_constraintTop_toBottomOf="@+id/list_harga"/>

    <ImageView
        android:id="@+id/icn_edit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/icon"
        app:layout_constraintBottom_toBottomOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@id/icn_delete"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/edit"
        app:tint="@color/kuningprimary" />

    <ImageView
        android:id="@+id/icn_delete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/guideline2"
        app:srcCompat="@drawable/delete"
        app:tint="@android:color/holo_red_dark" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="120dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>